Add save button

--- a/app/src/main/res/layout/activity_wellness_dashboard.xml
+++ b/app/src/main/res/layout/activity_wellness_dashboard.xml
@@ -22,8 +22,11 @@
 <!--    TODO 4: Create XML button object that binds to the saveButton instance in WellnessActivtity-->
 <!--    Make sure to abide by the constraints outlined by LinearLayout when setting the layout width and height -->
 
-
-
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"/>
 
     <Button
         android:id="@+id/toFitnessTimerButton"
